--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </head>
 <body>
 <div id="fullscreen-container">
-    <iframe src="https://online.fliphtml5.com/tmrdz/kxuf/" seamless="seamless" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true"></iframe>
+    <iframe src="https://online.fliphtml5.com/tmrdz/lavr/" seamless="seamless" scrolling="no" frameborder="0" allowtransparency="true" allowfullscreen="true"></iframe>
 </div>
 
 <script>
